# eucaim_anon_pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  PaddleOCR.yaml  README.md  Taskfile.yml  deidentify.py  example_clinical.csv  hash_clinical.py  main.py  paddle_ocr.py  pyproject.toml
.github/workflows/: docker-build.yml  ui_build.yml
ctp/: anon.script
lethe_ui/: README.md  app.go  go.mod  main.go  wails.json
lethe_ui/frontend/src/: index.html  main.css  main.js
lethe_ui/frontend/src/assets/js/: modal.js
src/anon_pipeline/: __init__.py  __main__.py  hash_clinical.py  ocr_deidentify.py  output_dir.py
src/lethe/: __main__.py  dcm_deidentify.py  defaults.py  dicom_utils.py  hash_clinical.py  ocr_deidentify.py  output_dir.py  paddle_ocr.py  version.py
