[project]
name = "lethe"
version = "0.9.7.dev1"
description = "A DICOM Anonymization pipeline in a Docker container"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clevercsv>=0.8.3",
    "en-core-web-lg",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "opencv-contrib-python-headless>=4.12.0.88",
    "paddleocr>=3.2.0",
    "paddlepaddle==3.0.0",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "presidio-image-redactor>=0.0.57",
    "pydicom>=3.0.1",
    "tqdm>=4.67.1",
    "typer-slim>=0.19.2",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
